Added news.html and trending.html, updated navbar links

--- a/terms.html
+++ b/terms.html
@@ -23,8 +23,8 @@
         <!-- Navbar -->
         <div class="item2">
             <ul>
-                <li><a href="home.html">News</a></li>
-                <li><a href="home.html">Trending</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="trending.html">Trending</a></li>
                 
             </ul>
         </div>
