--- a/trending.html
+++ b/trending.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VeriNews</title>
+  <title>Trending</title>
   <link rel="stylesheet" href="home.css">
   <link rel="icon" type="image/png" href="VN.png">
 </head>
@@ -18,7 +18,7 @@
     <div class="item2">
       <ul>
         <li><a href="news.html" class="active">News</a></li>
-        <li><a href="trending.html">Trending</a></li>
+        <li><a href="index.html">Trending</a></li>
         
       </ul>
     </div>
