updated changes to html links

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         <p>
           Contact us at:
           <a
-            href="mailto:contact@verinews.com"
+            href="mailto:evansmageto55@gmail.com"
             style="color: gold; text-decoration: none;"
-            >contact@verinews.com</a
+            >evansmageto55@gmail.com</a
           >
         </p>
       </div>
