--- a/privacy.html
+++ b/privacy.html
@@ -111,7 +111,7 @@
         <div class="footer-bottom">
             &copy; 2025 VeriNews. All Rights Reserved.
             <div class="contact-email">
-                <p>Contact us at: <a href="mailto:contact@verinews.com" style="color: gold;text-decoration: none;">contact@verinews.com</a></p>
+                <p>Contact us at: <a href="mailto:evansmageto55@gmail.com" style="color: gold;text-decoration: none;">evansmageto55@gmail.com</a></p>
             </div>
         </div>
     </div>
